# data-agent

./: AgentDesign.md  README.md  README_LLM_INTEGRATION.md  chocolate_sales_dataframe.pkl  data_dictionary.xlsx  download_chocolate_data.py  download_chocolate_sales.py  factorial.py  generate_sales_data.py  insert_data.py  load_and_save_to_doris.py  main.py  package.json  pnpm-lock.yaml  ppt.html  pyproject.toml  pytest.ini  read_csv.py  read_csv_and_save.py  read_csv_and_save_to_doris.py  read_csv_to_df.py  run_tests.sh  save_dataframe.py  save_to_doris.py  server.py  test
agent-ui/: package.json  pnpm-lock.yaml
docs/: coordinator_agent.md
examples/: test_all.py  test_coordinator.py  test_langgraph_workflow.py  test_llm.py  test_llm_integration.py  test_specific_message.py  test_workflow.py
scripts/: load_data.py  test_mock_llm.py  test_mysql.py  test_planner_prompt.py
src/agents/: analysis_agent.py  browser_agent.py  chart.py  coder_agent.py  datacatalog.py  datavis.py  finance.py  planner.py  playground.py  python.py  report.py  research_agent.py  storage.py  thinking.py
src/api/: __init__.py  app.py  langgraph_routes.py
src/config/: __init__.py  agents.py
src/graph/: __init__.py  builder.py  nodes.py  types.py
src/llm/: __init__.py  llm.py  qwq.py
src/mock/: user_chart.py
src/playground/: playground.py  workflow.py
src/prompts/: coordinator.md  planner.md  reporter.md  template.py
src/tools/: charts.py  doris.py  search.py  stock_tools.py
src/utils/: json_utils.py
tests/: README.md  conftest.py
web/: package.json  pnpm-lock.yaml
(+96 files in other folders)
