[project]
name = "data-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.115.12",
    "langchain>=0.3.21",
    "langgraph>=0.3.21",
    "litellm>=1.65.0",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.34.0",
    "json-repair>=0.9.0",
    "pytest>=8.3.5",
    "mcp>=1.6.0",
    "dbt-doris>=0.3.4",
    "agno>=1.2.6",
    "duckduckgo-search>=7.5.5",
    "rich>=13.9.4",
    "akshare>=1.16.65",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.40",
    "psycopg[binary]>=3.2.6",
    "pgvector>=0.4.0",
    "pypdf>=5.4.0",
    "psycopg2-binary>=2.9.10",
    "kagglehub>=0.3.10",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
